# mlops-for-all.github.io

./: .eslintignore  .eslintrc.json  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .stylelintignore  404.html  LICENSE  README.md  _headers  babel.config.js  docusaurus.config.js  index.html  index.min.0512a1c8d30613abaccafc9fba589684347f48fcc0d888a2c94b63680b3db07f909f222800ad3d37a43ecdf3bbc7c3e3eebe374496f041b16595cdc676538bd6.js  index.min.064fb2f166eab03af9b452cc9d5fec246f2eab13ac9859bcc4f27c6097e32c4f452ef52453ede18857a0f4b85a9c4394884544085cc5416e15f1b910d99e8930.js  index.min.09831aa96a2ae55e784826049c31d5e1d8f71e34eb2855e2bcf6a887e9becdfd791c2146b1e36392f8f389ea57a71553cede7f9c275b0c6e5a4193412403e917.js  index.min.0cc1a6fa2e66ec65188c2c6e1083e3ddba270e3d79ba634a0abe3ce6071d3ea657b4bf1dce91b276d6018b6ef6864f6e01fef42bf7ac6a92bc8ab0314b7238e3.js  index.min.136c059e1ff08b35b2b80c30c62442371d9bf74651bbe561a72eb70d4ff033d0f0ac778200d64a348e0b26f82b770ceaa0b0ec978590b7619868bbcc420f5903.js  index.min.17408f58679281824549e4e79dbcb197633750b996d575f854b8055febbf56352357d6fc91dae7861419920d902343390d277f45194fa1bef6140b0a4eb8faf3.js  index.min.179aa4aeeb3b64272ec841098955f42907cd8bcc6def48c93f2ece9eba744308f93efe65076416811bac78dda755b2f23d835e92dad2d2dbafde79db4970759f.js  index.min.233a37bdb8c2eaba8af9cdee69049d2e35c19ee81ba8b1c0c39d1b9521e0e21412321b6da93093bbc53c081e89f376a5b8054d666ef8d80923ec7e74036792af.js  (+62 more)
.github/: CODEOWNERS  (+1 more)
en/: 404.html  (+4 more)
python/: .envrc  lint_markdown.py  pyproject.toml  test.ipynb
python/translation/: main.py
(+3064 files in other folders)
